@@ -19,6 +19,7 @@
 	- permit manifest files as args to query/verify modes.
 	- fix: parameterized macro segfault (Jakub Bogusz <qboosh@pld.org.pl>).
 	- fix: i18n tags in rpm-2.5.x had wrong offset/length (#33478).
+	- fix: AIX has sizeof(uint_16) != sizeof(mode_t) verify cast needed.
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
